--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
 
 <a href="https://ei685duhcrjgeqk1lmc6drjve37v3nkpnbca0qkrbosi5p578dmg.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
 
+<p><video src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"></video></p>
+  <br>
+<h2>Your personal travel guide</h2>
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <p><image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"></p>
+
+    <p><image src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"></p>
+      
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <a href="https://ei685duhcrjgeqk1lmc6drjve37v3nkpnbca0qkrbosi5p578dmg.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
+
+    <p class="copy">&copy; Excursion</p>
+
   </body>
 </html>
